# evals

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  task-proposal.md
.github/workflows/: validate-tasks.yml
docs/: RESULTS-N6-MAY-2026.md  why-no-headline-yet.md
results/v2/: PER_TASK_DETAIL.md  inter_judge_agreement.md  raw.jsonl  scored.jsonl  scored_summary.md
runner/: README.md  aggregate.py  pyproject.toml  run.py  score.py  validate.py
tier1/: PREREG.md  methodology.md  task-schema.md
tier1/factbooks/: frontend-factbook.yaml  ml-pipeline-factbook.yaml  payments-factbook.yaml
tier1/judge-prompts/: citation.md  contradiction.md  coverage.md  quality.md  risk.md
tier1/tasks/frontend/: frontend-001-state-management.yaml  frontend-002-bundle-budget-img.yaml
tier1/tasks/ml-pipeline/: ml-pipeline-001-data-loading.yaml  ml-pipeline-002-fraud-scoring-uncovered.yaml
tier1/tasks/payments/: payments-001-refund-90day.yaml  payments-002-customer-id-cross-system.yaml
