[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factlet-evals-runner"
version = "0.1.0"
description = "Runner for the Factlet Protocol evals (Tier 1)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pyyaml>=6.0",
  "anthropic>=0.40",
  "openai>=1.50",
  "google-genai>=1.0",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

# Runner is a flat collection of scripts, not an importable package.
# Use `python run.py …` after `pip install -e .` (which installs deps).
[tool.hatch.build.targets.wheel]
bypass-selection = true
